# near-connect-passkey

./: README.md  passkey-executor.js
.github/: dependabot.yml
.github/workflows/: codeql.yml  contract.yml  dependency-review.yml  executor.yml
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/: registry.rs
executor/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
executor/docs/: UX_DECISIONS.md
executor/fixtures/: nep641-auth.json
executor/src/: authEnvelope.ts  borsh.ts  constants.ts  errors.ts  i18n.ts  index.ts  protocol.ts  registry.ts  relayer.ts  stateInit.ts  storage.ts  types.ts  ui.ts  walletContract.ts  webauthn.ts
executor/src/__tests__/: fixtures.test.ts  i18n.test.ts  requestMessage.test.ts  stateInit.test.ts  webauthn.test.ts
