[package]
name = "passkeys-registry"
description = "Open on-chain registry mapping WebAuthn credential ids (rawId) to their public keys"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
repository = "https://github.com/near/near-connect-passkey"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { version = "0.23", default-features = false, features = ["alloc"] }
bs58 = "0.5"
near-sdk = "5.29.0"

[dev-dependencies]
near-api = "0.8.6"
near-sandbox = "0.3.12"
near-sdk = { version = "5.29.0", features = ["unit-testing"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]
